--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,21 +1,34 @@
-FROM node:12
+FROM node:lts-alpine3.16 as deps 
 
-ENV PORT 3000
+WORKDIR /app
 
-# Create app directory
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
-
-# Installing dependencies
-COPY package*.json /usr/src/app/
+# Install dependencies
+COPY package*.json ./
 RUN npm install
 
+FROM node:lts-alpine3.16 as builder
+
+WORKDIR /app
+
+COPY --from=deps /app/node_modules ./node_modules
 # Copying source files
-COPY . /usr/src/app
+COPY . .
 
 # Building app
 RUN npm run build
+
+RUN rm -rf node_modules
+RUN npm install --only=production
+
+FROM node:lts-alpine3.16 as deploy
+
+WORKDIR /app
+COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/public ./public/
+COPY --from=builder /app/.next ./.next
+
 EXPOSE 3000
 
 # Running the app
-CMD "npm" "run" "dev"
+CMD [ "npm", "start"]
